--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,39 @@ body{
     text-align: center;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
+    background: #fdfdfd;
+    -webkit-transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: background .8s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+@-webkit-keyframes resize {
+    from{
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+    to{
+        -webkit-transform: scale(0.95);
+                transform: scale(0.95);
+    }
+}
+@keyframes resize {
+    from{
+        -webkit-transform: scale(1);
+                transform: scale(1);
+    }
+    to{
+        -webkit-transform: scale(0.95);
+                transform: scale(0.95);
+    }
+}
+.touched{
+    -webkit-transform: scale(0.95);
+                -ms-transform: scale(0.95);
+                transform: scale(0.95);
+    -webkit-animation: resize 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            animation: resize 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 button:focus,a:focus{outline: 0;}
@@ -17,6 +49,8 @@ button{
     color: white;
     background: coral;
     cursor: pointer;
+    -webkit-box-shadow: 0 8px 40px rgba(0,0,0, .2);
+            box-shadow: 0 8px 40px rgba(0,0,0, .2);
 }
 
 a{
@@ -24,23 +58,50 @@ a{
     z-index: 10;
 }
 
-@keyframes arrow{
+@-webkit-keyframes arrow{
     0%{
         bottom: 5%;
         left: 50%;
-        transform: translate(-50%,-95%);
+        -webkit-transform: translate(-50%,-95%);
+                transform: translate(-50%,-95%);
         opacity: .3;
     }
     50%{
         bottom: 1%;
         left: 50%;
-        transform: translate(-50%,-99%);
+        -webkit-transform: translate(-50%,-99%);
+                transform: translate(-50%,-99%);
         opacity: 1;
     }
     100%{
         bottom: 5%;
         left: 50%;
-        transform: translate(-50%,-95%);
+        -webkit-transform: translate(-50%,-95%);
+                transform: translate(-50%,-95%);
+        opacity: .3;
+    }
+}
+
+@keyframes arrow{
+    0%{
+        bottom: 5%;
+        left: 50%;
+        -webkit-transform: translate(-50%,-95%);
+                transform: translate(-50%,-95%);
+        opacity: .3;
+    }
+    50%{
+        bottom: 1%;
+        left: 50%;
+        -webkit-transform: translate(-50%,-99%);
+                transform: translate(-50%,-99%);
+        opacity: 1;
+    }
+    100%{
+        bottom: 5%;
+        left: 50%;
+        -webkit-transform: translate(-50%,-95%);
+                transform: translate(-50%,-95%);
         opacity: .3;
     }
 }
@@ -53,7 +114,9 @@ a:focus{outline: 0;}
     position: absolute;
     bottom: 0%;
     left: 50%;
-    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
     background: transparent;
     cursor: pointer;
     z-index: 10;
@@ -64,8 +127,11 @@ a:focus{outline: 0;}
     position: absolute;
     bottom: 5%;
     left: 50%;
-    transform: translate(-50%,-95%);
-    animation: arrow 2s linear infinite;
+    -webkit-transform: translate(-50%,-95%);
+        -ms-transform: translate(-50%,-95%);
+            transform: translate(-50%,-95%);
+    -webkit-animation: arrow 2s linear infinite;
+            animation: arrow 2s linear infinite;
     opacity: .3;
     z-index: 5;
     cursor: pointer;
@@ -79,7 +145,9 @@ a:focus{outline: 0;}
     font-weight: 100;
     display: inline-block;
     opacity: .5;
-    transform: scaleY(2);
+    -webkit-transform: scaleY(2);
+        -ms-transform: scaleY(2);
+            transform: scaleY(2);
     margin: 0 .5em;
 }
 
@@ -126,8 +194,12 @@ a:focus{outline: 0;}
     width: 100%;
     height: 50px;
     padding-top: 5px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     letter-spacing: -2px;
 }
 
@@ -145,10 +217,19 @@ a:focus{outline: 0;}
 }
 
 .landing{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     width: 100%;
     height: calc(100vh - 60px);
     color: white;
@@ -160,7 +241,9 @@ a:focus{outline: 0;}
     letter-spacing: -.05em;
     line-height: 20px;
     font-size: 5em;
-    transform: scaleY(1.1);
+    -webkit-transform: scaleY(1.1);
+        -ms-transform: scaleY(1.1);
+            transform: scaleY(1.1);
 }
 
 .name span{
@@ -177,18 +260,26 @@ a:focus{outline: 0;}
 .contacts{
     width: 100%;
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .contacts a img{
     width: 35px;
     margin: 10px 40px;
+    -webkit-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .contacts a img:hover{
-    transform: scale(1.05);
+    -webkit-transform: scale(1.05);
+        -ms-transform: scale(1.05);
+            transform: scale(1.05);
 }
 
 /* ================================================== SECOND PART ================================================== */
@@ -197,22 +288,42 @@ a:focus{outline: 0;}
     position: relative;
     width: 100%;
     min-height: 100vh;
-    background: white;
+    background: transparent;
     overflow: hidden;
     color: black;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 }
 
 .about-me{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     min-height: 90vh;
 }
 
@@ -220,72 +331,123 @@ a:focus{outline: 0;}
     position: relative;
     width: 70%;
     margin-bottom: 30px;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 1em;
     padding-top: 50px;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    color: #080911;
 }
 
 .other{
     width: 90%;
     height: 80px;
-    align-self: center;
+    -ms-flex-item-align: center;
+        align-self: center;
     margin-bottom: 5em;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .main-info{
     width: 100%;
     height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .card{
     position: relative;
-    width: 270px;
-    height: 450px;
+    width: 300px;
+    height: 420px;
     border-radius: 10px;
     overflow: hidden;
+    -webkit-box-shadow: 0 8px 40px rgba(0,0,0, .2);
+            box-shadow: 0 8px 40px rgba(0,0,0, .2);
+    background: #FDFEFF;
+    -webkit-transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 1.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    cursor: pointer;
 }
 
+.card:hover{
+    -webkit-box-shadow: 0 8px 40px rgba(255, 255, 255, 0.5);
+            box-shadow: 0 8px 40px rgba(255, 255, 255, 0.5);
+}
 .card img{
     position: absolute;
     top: 5%;
     left: 50%;
-    transform: translate(-50%,-5%);
-    width: 200px;
-    height: 200px;
+    -webkit-transform: translate(-50%,-5%);
+        -ms-transform: translate(-50%,-5%);
+            transform: translate(-50%,-5%);
+    width: 180px;
+    height: 180px;
     border-radius: 50%;
-    border: 15px solid white;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     z-index: 3;
+    -webkit-box-shadow: 0 6px 20px rgba(0,0,0, .4);
+            box-shadow: 0 6px 20px rgba(0,0,0, .4);
 }
 
 .lower{
     width: 100%;
-    height: 65%;
-    margin-top: 60%;
-    background: linear-gradient(rgba(0, 75, 75, 0.658), rgb(255, 127, 80));
+    height: 75%;
+    margin-top: 45%;
+    /*background: linear-gradient(rgba(0, 75, 75, 0.658), rgb(255, 127, 80));*/
     z-index: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-    padding-top: 20px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    color: black;
+    padding-top: 10px;
+    background: transparent;
+    -webkit-transition: all 2.5 cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: all 2.5 cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 2.5 cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .lower h4{
-    font-weight: 400;
+    font-weight: 500;
     font-size: 1em;
-    margin: .7em 0;
+    margin: .9em 0;
     text-align: left;
     width: 80%;
     line-height: 1.7em;
@@ -294,6 +456,7 @@ a:focus{outline: 0;}
     font-weight: 300;
     font-size: .9em;
     float: right;
+    color: #666B7D;
 }
 
 /* ================================================== THIRD PART ================================================== */
@@ -312,18 +475,33 @@ a:focus{outline: 0;}
     z-index: -1;
     width: 200%;
     height: 90%;
+    background: -webkit-gradient(linear,left top, left bottom,color-stop(20%, rgba(255, 127, 80, 0.767)), color-stop(40%, rgba(0, 165, 146, 0.836)), color-stop(90%, white),to(white));
+    background: -webkit-linear-gradient(top,rgba(255, 127, 80, 0.767)  20%, rgba(0, 165, 146, 0.836) 40%, white 90%,white 100%);
+    background: -o-linear-gradient(top,rgba(255, 127, 80, 0.767)  20%, rgba(0, 165, 146, 0.836) 40%, white 90%,white 100%);
     background: linear-gradient(to bottom,rgba(255, 127, 80, 0.767)  20%, rgba(0, 165, 146, 0.836) 40%, white 90%,white 100%);
-    transform: rotateZ(3deg);
+    -webkit-transform: rotateZ(3deg);
+        -ms-transform: rotate(3deg);
+            transform: rotateZ(3deg);
     padding-bottom: 50px;
 }
 
 .projects{
     min-height: 85vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
     padding: 20px;
     margin-bottom: 10px;
 }
@@ -331,7 +509,8 @@ a:focus{outline: 0;}
 .project{
     position: relative;
     border-radius: 5px;
-    box-shadow: 0 2px 20px 1px rgb(16, 16, 16);
+    -webkit-box-shadow: 0 2px 20px 1px rgb(16, 16, 16);
+            box-shadow: 0 2px 20px 1px rgb(16, 16, 16);
     height: 400px;
     width: 300px;
     overflow: hidden;
@@ -352,7 +531,9 @@ a:focus{outline: 0;}
     position: absolute;
     top: 10%;
     left: 50%;
-    transform: translate(-50%,-10%);
+    -webkit-transform: translate(-50%,-10%);
+        -ms-transform: translate(-50%,-10%);
+            transform: translate(-50%,-10%);
     font-size: 2em;
     font-weight: 500;
     letter-spacing: 0em;
@@ -364,16 +545,24 @@ a:focus{outline: 0;}
     width: 100%;
     height: 40%;
     margin-top: 100px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .lang img{
     width: 40px;
     margin: 10px 25px;
-    filter: drop-shadow(0 0 2px white);
+    -webkit-filter: drop-shadow(0 0 2px white);
+            filter: drop-shadow(0 0 2px white);
 }
 
 .details{
@@ -382,14 +571,19 @@ a:focus{outline: 0;}
     position: absolute;
     bottom: 0;
     left: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: nowrap;
-    justify-content: center;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .demo,
 .github,
-.codepen_btn{
+.single_btn{
     width: 150px;
     height: 50px;
     background: rgba(0, 165, 146, 0.836);
@@ -423,14 +617,13 @@ a:focus{outline: 0;}
     background-size: cover;
     background-position: center;
 }
-
-.login + .details .github,
-.news + .details .github{
-    width: 300px;
-    border: none;
+.facerecognition{
+    background: url('../media/facerecognition.png');
+    background-size: cover;
+    background-position: center;
 }
 
-.codepen + .details .codepen_btn{
+.details .single_btn{
     width: 300px;
     border: none;
 }
@@ -447,7 +640,9 @@ footer{
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%,0);
+    -webkit-transform: translate(-50%,0);
+        -ms-transform: translate(-50%,0);
+            transform: translate(-50%,0);
     width: 100%;
     height: auto;
     margin-bottom: 10px;
@@ -528,7 +723,9 @@ footer{
     .card img{
         top: 5%;
         left: 50%;
-        transform: translate(-50%,-5%)
+        -webkit-transform: translate(-50%,-5%);
+            -ms-transform: translate(-50%,-5%);
+                transform: translate(-50%,-5%)
     }
     .about{
         padding-top: 0;
